--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ before_install:
   - pip install tox
   - sudo apt-get update
   - sudo apt-get install python2.5-dev python2.6-dev python2.7-dev python3.1-dev python3.2-dev python3.3-dev
-  - sudo apt-get install dig
+  - sudo apt-get install dnsutils
 
 script: tox
