Close #8 : Cleanup and standalone server

--- a/tox.ini
+++ b/tox.ini
@@ -2,15 +2,17 @@
 envlist=py26,py27,py31,py32,py33
  
 [testenv]
+deps=
+    docopt
 commands=
     {envpython} setup.py --quiet build install
     {envpython} -m pymads.tests.runner
 sitepackages=False
 
 [testenv:py26]
-deps=
+deps={[testenv]deps}
     unittest2
 
 [testenv:py31]
-deps=
+deps={[testenv]deps}
     unittest2py3k
