--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: python
 
 before_install:
   - pip install tox
+  - pip install pylint
   - sudo apt-get update
   - sudo apt-get install python2.5-dev python2.6-dev python2.7-dev python3.1-dev python3.2-dev python3.3-dev
   - sudo apt-get install dnsutils
 
-script: tox
+script: tox && pylint pymads
