--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist=py26,py27,py31,py32,py33
 [testenv]
 deps=
     docopt
+    persei
 commands=
     {envpython} setup.py --quiet build install
     {envpython} -m pymads.tests.runner
