--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27,py31,py32,py33
+envlist=py26,py27,py32,py33
  
 [testenv]
 deps=
@@ -13,7 +13,3 @@ sitepackages=False
 [testenv:py26]
 deps={[testenv]deps}
     unittest2
-
-[testenv:py31]
-deps={[testenv]deps}
-    unittest2py3k
